# SlimmableNamTrain

./: .gitignore  CITATION.cff  LICENSE  README.md  extension_slimmable.py  pyproject.toml
inputs/configs/: learning.json
inputs/configs/data/: clean.json  crunch.json  lead.json  rhythm.json
inputs/configs/models/a1/: nano.json  standard.json
inputs/configs/models/a2/: full.json  slimmable.json
nam_slimmable/: __init__.py  _model.py  _register.py
