[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nam_slimmable"
description = "Slimmable Neural Amp Models"
authors = [
    {name = "Steven Atkinson", email = "steve@atkinsonadvancedmodeling.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "neural-amp-modeler>=0.11.0",
    "numpy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Atkinson-Advanced-Modeling/NamAdjustableWaveNetTrain"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "nam_slimmable/_version.py"

[tool.setuptools]
packages = ["nam_slimmable"]
